Fix issue with menu icon before plugin configuration

--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -1,5 +1,6 @@
 
-#toplevel_page_skyroom-rooms .wp-menu-image:before {
+#toplevel_page_skyroom-rooms .wp-menu-image:before,
+#toplevel_page_skyroom-settings .wp-menu-image:before {
     content: '' !important;
     background: url(../images/icon.png) center center no-repeat;
     -webkit-background-size: 20px 20px;
@@ -7,11 +8,13 @@
     opacity: .6;
 }
 
-#toplevel_page_skyroom-rooms.wp-menu-open .wp-menu-image:before {
+#toplevel_page_skyroom-rooms.wp-menu-open .wp-menu-image:before,
+#toplevel_page_skyroom-settings.wp-menu-open .wp-menu-image:before {
     opacity: 1;
 }
 
-#toplevel_page_skyroom-rooms:not(.wp-menu-open):hover .wp-menu-image:before {
+#toplevel_page_skyroom-rooms:not(.wp-menu-open):hover .wp-menu-image:before,
+#toplevel_page_skyroom-settings:not(.wp-menu-open):hover .wp-menu-image:before {
     background-image: url(../images/icon-hover.png);
     opacity: 1;
 }
